# Trabajo_ROM

./: README.md
practica9_pkg/: CMakeLists.txt  package.xml
practica9_pkg/launch/: localization_launch.py
practica9_pkg/maps/: coppeliasim_map.yaml  map.pgm  speed_mask_coppeliasim_map.pgm  speed_mask_coppeliasim_map.yaml
practica9_pkg/param/: nav2_params_speed_limit.yaml
practica9_pkg/src/: zone_navigator.cpp
